# DoctorsWithoutBordersOCR

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app_doctr.py  app_llm.py  pyproject.toml  requirements.txt  settings.ini
.github/workflows/: python_package.yml
.streamlit/: secrets.toml
data/: .gitignore
notebooks/: claude_example.ipynb  ocr_azure_functions.ipynb
src/data/: data_upload_DHIS2.py
src/docTR/: ocr_functions.py
src/doctr_streamlit/: README.md  app.py
src/llmocr/: gpt4_turbo_ocr.py
src/msfocr/: app.py
src/msfocr/.streamlit/: secrets.toml
src/msfocr/data/: data_upload_DHIS2.py  dhis2.py  post_processing.py
src/msfocr/docTR/: ocr_functions.py
src/msfocr/doctr/: ocr_functions.py
src/msfocr/llm/: ocr_functions.py
tests/: conftest.py  test_data_dhis2.py  test_data_post_processing.py  test_data_upload_DHIS2.py  test_doctr_ocr_functions.py  test_llm_ocr_functions.py  test_ocr_functions.py
